--- a/galleri.css
+++ b/galleri.css
@@ -18,6 +18,7 @@ main h1{
 main p{
 
 }
+
 /*Media queries til mobile landscape*/
 
 @media screen and (min-width:627px){
@@ -26,6 +27,7 @@ main p{
     }
 
     main img{
+        width: 50%;
 
     }
 }
@@ -40,6 +42,8 @@ main p{
     main img{
 
     }
+
+
 }
 
 /*Media queries til tablet landscape*/
