--- a/footer.css
+++ b/footer.css
@@ -33,6 +33,11 @@ main a:hover{
     text-decoration: underline;
 }
 
+@media screen and (min-width:627px){
+    main{
+        width: 500px;
+    }
+}
 
 @media screen and (min-width:768px){
 
