scroll til toppen knap

--- a/galleri.css
+++ b/galleri.css
@@ -8,7 +8,7 @@ main {
 }
 
 main img{
-    width: 100%;
+    width: 50%;
 }
 
 main h1{
@@ -17,6 +17,12 @@ main h1{
 
 main p{
 
+}
+
+main{
+    display: grid;
+    grid-template-columns: repeat (2, 1fr);
+    grid-template-rows: repeat (10, 1fr);
 }
 
 /*Media queries til mobile landscape*/
