--- a/om.css
+++ b/om.css
@@ -18,6 +18,17 @@ main img{
     border: 15px solid white;
 }
 
+/* style til top icon*/
+.fas{
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 5;
+    cursor: pointer;
+
+}
+
 /*Media queries til mobile landscape*/
 
 @media screen and (min-width:627px){
