forside, nyt menupunkt, borders og baggrund

--- a/om.css
+++ b/om.css
@@ -3,7 +3,7 @@
     box-sizing: border-box;
 }
 body {
-    background-image: url(wall3.jpg);
+    background-image: ;
 }
 
 /* Mobile first version*/
