--- a/footer.css
+++ b/footer.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+body{
+background-color: #F8DDCF;
+}
+
 .soME{
     display: inline-block;
     margin-right: 10px;
