--- a/header.css
+++ b/header.css
@@ -21,7 +21,7 @@ body{
     z-index: 10;
     top: 0;
     left: 0;
-    background-color: gray;
+    background-color: #F8DDCF;
     overflow-x: hidden;
     padding-top: 60px;
     transition: 0.5s;
@@ -30,8 +30,8 @@ body{
 .sideNav a{
     text-decoration: none;
     padding: 8px 8px 8px 32px;
-    font-size: 25px;
-    color: black;
+    font-size: 20px;
+    color: #F18FAB;
     display: block;
     transition: 0.3s;
     border-bottom: 1px solid black;
@@ -43,33 +43,38 @@ body{
 
 /* styling af topnav til ipad og desktop*/
 
-@media screen and (min-width:627px){
-    #sideMenu, .sideNav, .closebtn, span{
+@media screen and (min-width:768px){
+    #sideMenu, .sideNav, .closebtn, span, #logo{
         display: none;
     }
 
+    #logo1 img{
+    width: 70%;
+    float: left;
+    margin-top: 10px;
+    margin-left: 10px;
+    position: relative;
+    z-index: 1;
+}
     #topMenu{
-        display: inline-block;
+        display: flex;
+
+
         overflow: hidden;
-        width: 390px;
+        width: 100%;
+        height: 60px;
         float: right;
         position: relative;
         z-index: 3;
+        border-bottom: 1px solid #F18FAB
     }
-    .punkter{
 
-    }
-    #logo img{
-        float: left;
-        margin: 0;
-        margin-top: 20px;
-        margin-left: 20px;
-    }
+
 
     #topMenu a{
 
         font-size: 1.2em;
-        color: black;
+        color: #F18FAB;
         text-align: center;
         padding: 10px 10px;
         text-decoration: none;
@@ -78,8 +83,32 @@ body{
 
     .punkter{
         margin-top: 20px;
+        width: 200%;
     }
 
 
 
+}
+
+@media screen and (min-width:1024px){
+
+    .punkter{
+        width: 80%;
+    }
+
+    #logo1 img{
+        width: 35%
+    }
+}
+
+
+@media screen and (min-width:1200px){
+
+    .punkter{
+        width: 50%;
+    }
+
+    #logo1 img{
+        width: 25%
+    }
 }
