--- a/index.css
+++ b/index.css
@@ -58,7 +58,9 @@ main {
         grid-row: 1/2;
         width: 290px;
         margin: 0 auto;
-        border: 1.8px solid #F18FAB;
+        border: 2px solid transparent;
+        border-image: linear-gradient(10deg, #F18FAB, #fff);
+        border-image-slice: 1;
         padding: 3vw;
     }
 
@@ -67,7 +69,9 @@ main {
         grid-row: 1/1;
         width: 290px;
         margin: 0 auto;
-        border: 1.8px solid #F18FAB;
+        border: 2px solid transparent;
+        border-image: linear-gradient(10deg, #F18FAB, #fff);
+        border-image-slice: 1;
         padding: 3vw;
     }
 
@@ -75,7 +79,9 @@ main {
 
         width: 290px;
         margin: 0 auto;
-        border: 2px solid #F18FAB;
+        border: 2px solid transparent;
+        border-image: linear-gradient(10deg, #F18FAB, #fff);
+        border-image-slice: 1;
         padding: 3vw;
         display: none;
     }
@@ -84,9 +90,9 @@ main {
 
         grid-column: 1/3;
         border: 2px solid transparent;
-        padding: 3vw;
         border-image: linear-gradient(10deg, #F18FAB, #fff);
         border-image-slice: 1;
+        padding: 3vw;
 
 
     }
