--- a/smykker.css
+++ b/smykker.css
@@ -1,76 +1,126 @@
-*{
+* {
     box-sizing: border-box;
 }
 
-body{
+body {
     background-color: #F8DDCF;
+    margin: 0;
 }
 
-main{
+main {
     width: 290px;
     margin: 0 auto;
 
 
 }
 
-.smykker{
+.smykker {
     display: grid;
     grid-gap: 20px;
+    margin-top: 2vw;
 }
-.smykker img{
+
+.smykker img {
     width: 100%;
     border: 8px solid white;
 }
 
+.koeb{
+    border: none;
+    background-color: transparent;
+    border: 1.5px solid #F18FAB;
+    padding: 4px;
+    width: 100%;
+    cursor: pointer;
+}
 
-@media screen and (min-width:627px){
-    main{
+ .menu_item {
+        background-color: transparent;
+        border: none;
+        color: #F18FAB;
+        cursor: pointer;
+        padding-left: 2vw;
+        padding-right: 2vw;
+
+    }
+
+
+
+@media screen and (min-width:627px) {
+    main {
         width: 400px;
     }
-    .smykker img{
+    .smykker img {}
+
+}
+
+
+
+
+@media screen and (min-width:768px) {
+    main {
+        width: 600px;
+        margin: 0 auto;
+    }
+
+    .smykker {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-gap: 20px;
+        margin-top: 80px;
+    }
+
+    .smykker img {
+        width: 100%;
+        border: 8px solid white;
+
+
+    }
+    nav {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        border-bottom: 1px solid #F18FAB;
 
     }
 
-}
+    .knapper {
+        width: 600px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
 
 
+    }
 
 
-@media screen and (min-width:768px){
-    main{
-    width: 600px;
-    margin: 0 auto;
-}
-
-.smykker{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;;
-
-    grid-gap: 20px;
-}
-
-.smykker img{
-    width: 100%;
-    border: 8px solid white;
-
-
-}
 }
 
 /*Media queries til tablet landscape*/
 
-@media screen and (min-width:1024px){
-    main{
-    width: 750px;
+@media screen and (min-width:1024px) {
+    main {
+        width: 750px;
 
-}
+    }
+
+
+    .knapper {
+        width: 750px;
+
+    }
+
 
 }
 
 /*Media queries til 1200px bredde*/
 
-@media screen and (min-width:1200px){
-    main{
+@media screen and (min-width:1200px) {
+    main {
+        width: 900px;
+    }
+
+    .knapper{
         width: 900px;
     }
 
@@ -79,10 +129,13 @@ main{
 
 /*Media queries til 1500px bredde*/
 
-@media screen and (min-width:1500px){
-    main{
+@media screen and (min-width:1500px) {
+    main {
+        width: 1000px;
+    }
+
+    .knapper{
         width: 1000px;
     }
 
 }
-
