--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@
 
 body {
     background-color: #F8DDCF;
+
 }
 
 /* Mobile first version*/
@@ -44,58 +45,68 @@ main {
         width: 600px;
     }
 
-    main img {}
-
     main {
         display: grid;
-        grid-template-columns: repeat (2, 1fr);
-        grid-template-rows: repeat (3, 1fr);
-        grid-gap: 20px;
+        grid-template-columns: auto auto auto;
+        grid-template-rows: auto auto auto;
+
     }
 
     #container {
         grid-column: 1/1;
         grid-row: 1/2;
-        width: 290px;
+        width: 289px;
         margin: 0 auto;
-        border: 2px solid transparent;
-        border-image: linear-gradient(10deg, #F18FAB, #fff);
-        border-image-slice: 1;
-        padding: 3vw;
+        padding-left: 3vw;
+        padding-right: 3vw;
+        padding-top: 3vw;
+        padding-bottom: 1vw;
     }
 
     #container1 {
+        grid-column: 2/3;
+        grid-row: 1/3;
+        width: 289px;
+        margin: 0 auto;
+        padding-left: 3vw;
+        padding-right: 3vw;
+        padding-top: 3vw;
+        padding-bottom: 1vw;
+    }
+
+    .linje{
         grid-column: 2/2;
         grid-row: 1/1;
-        width: 290px;
-        margin: 0 auto;
-        border: 2px solid transparent;
-        border-image: linear-gradient(10deg, #F18FAB, #fff);
-        border-image-slice: 1;
-        padding: 3vw;
+        width: 1px;
+        height: 270px;
+        background-color:  #F18FAB;
+        margin-top: 55px;
+
     }
 
-    #container2 {
-
-        width: 290px;
-        margin: 0 auto;
-        border: 2px solid transparent;
-        border-image: linear-gradient(10deg, #F18FAB, #fff);
-        border-image-slice: 1;
-        padding: 3vw;
-        display: none;
-    }
 
     #container3 {
 
         grid-column: 1/3;
-        border: 2px solid transparent;
-        border-image: linear-gradient(10deg, #F18FAB, #fff);
-        border-image-slice: 1;
-        padding: 3vw;
+
+        padding-right: 3vw;
+        padding-left: 3vw;
+
 
 
     }
+
+    .linje1{
+        width: 450px;
+        height: 1px;
+        background-color:  #F18FAB;
+        grid-column: 1/3;
+        grid-row: 2/3;
+        margin-left: 8vw;
+
+    }
+
+
 }
 
 /*Media queries til tablet landscape*/
