--- a/om.css
+++ b/om.css
@@ -6,6 +6,15 @@ body {
     background-image: ;
 }
 
+h1{
+    font-family: 'Raleway', sans-serif;
+
+}
+
+p{
+    font-family: 'Montserrat', sans-serif;
+}
+
 /* Mobile first version*/
 
 main {
