--- a/footer.css
+++ b/footer.css
@@ -6,6 +6,15 @@ body{
 background-color: #F8DDCF;
 }
 
+h1{
+    font-family: 'Raleway', sans-serif;
+
+}
+
+p{
+    font-family: 'Montserrat', sans-serif;
+}
+
 .soME{
     display: inline-block;
     margin-right: 10px;
