--- a/smykker.css
+++ b/smykker.css
@@ -7,6 +7,8 @@ body {
     margin: 0;
 }
 
+
+
 main {
     width: 290px;
     margin: 0 auto;
@@ -18,6 +20,8 @@ main {
     display: grid;
     grid-gap: 20px;
     margin-top: 2vw;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
 }
 
 .smykker img {
@@ -32,6 +36,7 @@ main {
     padding: 4px;
     width: 100%;
     cursor: pointer;
+    font-family: 'Montserrat', sans-serif;
 }
 
  .menu_item {
@@ -39,10 +44,15 @@ main {
         border: none;
         color: #F18FAB;
         cursor: pointer;
-        padding-left: 2vw;
-        padding-right: 2vw;
+        padding-left: 40pxw;
+        padding-right: 40px;
+     padding-top: 10px;;
 
     }
+
+.knapper{
+    font-family: 'Raleway', sans-serif;
+}
 
 
 
@@ -81,6 +91,7 @@ main {
         top: 0;
         width: 100%;
         border-bottom: 1px solid #F18FAB;
+        background-color: #F8DDCF
 
     }
 
@@ -89,6 +100,10 @@ main {
         margin: 0 auto;
         display: flex;
         justify-content: center;
+
+
+
+
 
 
     }
