--- a/om.css
+++ b/om.css
@@ -55,11 +55,60 @@ main img{
 @media screen and (min-width:768px){
     main{
         width: 600px;
+         display: grid;
+        grid-template-columns: auto auto auto;
+        grid-template-rows: auto auto auto;
+
+    }
+#container {
+        grid-column: 1/1;
+        grid-row: 1/2;
+        width: 289px;
+        margin: 0 auto;
+        padding-left: 3vw;
+        padding-right: 3vw;
+        padding-top: 3vw;
+
     }
 
-    main img{
+    #container1 {
+        grid-column: 2/3;
+        grid-row: 1/3;
+        width: 289px;
+        margin: 0 auto;
+        padding-left: 3vw;
+        padding-right: 3vw;
+        padding-top: 3vw;
 
     }
+
+    .linje{
+        grid-column: 2/2;
+        grid-row: 1/1;
+        width: 1px;
+        height: 270px;
+        background-color:  #F18FAB;
+        margin-top: 80px;
+
+    }
+
+
+    #container2 {
+
+        grid-column: 1/3;
+
+        padding-right: 3vw;
+        padding-left: 3vw;
+        margin-top: -10px;
+
+
+
+    }
+
+
+
+
+
 }
 
 /*Media queries til tablet landscape*/
