--- a/om.css
+++ b/om.css
@@ -3,7 +3,8 @@
     box-sizing: border-box;
 }
 body {
-    background-image: ;
+    background-color: #F8DDCF;
+
 }
 
 h1{
@@ -63,22 +64,22 @@ main img{
 #container {
         grid-column: 1/1;
         grid-row: 1/2;
-        width: 289px;
+        width: 290px;
         margin: 0 auto;
-        padding-left: 3vw;
-        padding-right: 3vw;
-        padding-top: 3vw;
+        padding-left: 25px;
+        padding-right:30px;
+        padding-top: 30px;
 
     }
 
     #container1 {
         grid-column: 2/3;
         grid-row: 1/3;
-        width: 289px;
+        width: 290px;
         margin: 0 auto;
-        padding-left: 3vw;
-        padding-right: 3vw;
-        padding-top: 3vw;
+        padding-left: 30px;
+        padding-right: 30px;
+        padding-top: 70px;
 
     }
 
@@ -88,7 +89,7 @@ main img{
         width: 1px;
         height: 270px;
         background-color:  #F18FAB;
-        margin-top: 80px;
+        margin-top: 120px;
 
     }
 
@@ -96,18 +97,14 @@ main img{
     #container2 {
 
         grid-column: 1/3;
-
-        padding-right: 3vw;
-        padding-left: 3vw;
+        width: 600px;
+        padding-right: 30px;
+        padding-left: 30px;
         margin-top: -10px;
 
 
 
     }
-
-
-
-
 
 }
 
@@ -118,9 +115,7 @@ main img{
         width: 750px;
     }
 
-    main img{
 
-    }
 }
 
 /*Media queries til 1200px bredde*/
@@ -130,9 +125,7 @@ main img{
         width: 900px;
     }
 
-    main img{
 
-    }
 }
 
 /*Media queries til 1500px bredde*/
@@ -142,8 +135,6 @@ main img{
         width: 1000px;
     }
 
-    main img{
 
-    }
 }
 
