--- a/footer.css
+++ b/footer.css
@@ -4,14 +4,20 @@
 
 body{
 background-color: #F8DDCF;
+    margin: 0;
 }
 
-h1{
+footer{
+    position: absolute;
+    width: 100%;
+}
+
+main h1{
     font-family: 'Raleway', sans-serif;
 
 }
 
-p{
+main p{
     font-family: 'Montserrat', sans-serif;
 }
 
