--- a/kontakt.css
+++ b/kontakt.css
@@ -1,5 +1,6 @@
 body {
-    background-image: ;
+    margin: 0;
+    background-color: #F8DDCF;
 }
 
 main {
@@ -7,17 +8,17 @@ main {
     margin: 0 auto;
 }
 
-iframe{
+main iframe{
     width: 100%;
     height: 400px;
 }
 
-h1{
+main h1{
     font-family: 'Raleway', sans-serif;
 
 }
 
-p{
+main p{
     font-family: 'Montserrat', sans-serif;
 }
 
