--- a/header.css
+++ b/header.css
@@ -33,12 +33,12 @@ body{
 
 .sideNav a{
     text-decoration: none;
-    padding: 8px 8px 8px 32px;
+    padding: 20px 8px 8px 32px;
     font-size: 20px;
     color: #F18FAB;
     display: block;
     transition: 0.3s;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #F18FAB;
 }
 
 .topNav{
