--- a/header.css
+++ b/header.css
@@ -3,8 +3,10 @@ body{
     margin: 0;
 }
 
-.punkter{
+.punkter a{
     font-family: 'Raleway', sans-serif;
+
+
 }
 
 /* Styling af navigation i mobilstørrelse */
@@ -39,6 +41,7 @@ body{
     display: block;
     transition: 0.3s;
     border-bottom: 1px solid #F18FAB;
+    font-size: 16px;
 }
 
 .topNav{
