--- a/header.css
+++ b/header.css
@@ -11,13 +11,49 @@ body{
 
 /* Styling af navigation i mobilstørrelse */
 
-#logo img{
+/*#logo img{
     width: 30%;
     float: right;
     margin-top: 10px;
     margin-right: 10px;
     position: relative;
     z-index: 11;
+}*/
+
+#logo{
+    background-image: url(logomary3-01.svg);
+    background-size: 300% 100%;
+    width: 26%;
+    height: 9vw;
+     z-index: 11;
+    position: relative;
+    float: right;
+   transform: scale(1.2);
+    margin-right: 10px;
+    margin-top: 10px;
+
+
+}
+
+#logo:hover{
+    animation-name: diamant;
+    animation-duration: 1s;
+    animation-timing-function: steps(3);
+    animation-iteration-count: infinite;
+    animation-direction: normal;
+
+}
+
+@keyframes diamant{
+    from{
+        background-position: 0 0;
+
+    }
+
+    to{
+        background-position: 300% 0;
+
+    }
 }
 
 .sideNav{
@@ -55,25 +91,54 @@ body{
         display: none;
     }
 
-    #logo1 img{
-    width: 70%;
-    float: left;
-    margin-top: 10px;
-    margin-left: 10px;
+    #container1{
+
+
+    }
+
+    #logo1{
+    background-image: url(logomary3-01.svg);
+    background-size: 300% 100%;
+    width: 26%;
+    height: 9vw;
+     z-index: 11;
     position: relative;
-    z-index: 1;
+    float: left;
+   transform: scale(1);
+    margin-right: 10px;
+
+
+}
+
+#logo1:hover{
+    animation-name: diamant;
+    animation-duration: 1s;
+    animation-timing-function: steps(3);
+    animation-iteration-count: infinite;
+    animation-direction: normal;
+
+}
+
+@keyframes diamant{
+    from{
+        background-position: 0 0;
+
+    }
+
+    to{
+        background-position: 300% 0;
+
+    }
 }
     #topMenu{
         display: flex;
-
-
         overflow: hidden;
         width: 100%;
         height: 60px;
         float: right;
-        position: relative;
         z-index: 3;
-        border-bottom: 1px solid #F18FAB
+        border-bottom: 1px solid #F18FAB;
+        position: fixed;
     }
 
 
@@ -103,7 +168,7 @@ body{
         width: 80%;
     }
 
-    #logo1 img{
+    #logo1{
         width: 35%
     }
 }
@@ -115,7 +180,7 @@ body{
         width: 50%;
     }
 
-    #logo1 img{
+    #logo1{
         width: 25%
     }
 }
