ændringer med header

--- a/header.css
+++ b/header.css
@@ -91,10 +91,6 @@ body{
         display: none;
     }
 
-    #container1{
-
-
-    }
 
     #logo1{
     background-image: url(logomary3-01.svg);
@@ -131,15 +127,21 @@ body{
     }
 }
     #topMenu{
-        display: flex;
-        overflow: hidden;
-        width: 100%;
+        display: block;
+        width: 70%;
         height: 60px;
         float: right;
-        z-index: 3;
+        z-index: 1;
         border-bottom: 1px solid #F18FAB;
-        position: fixed;
+
+        background-color: #F8DDCF;
     }
+
+
+    {
+
+    }
+
 
 
 
@@ -148,6 +150,7 @@ body{
         font-size: 1.2em;
         color: #F18FAB;
         text-align: center;
+
         padding: 10px 10px;
         text-decoration: none;
 
@@ -155,7 +158,9 @@ body{
 
     .punkter{
         margin-top: 20px;
-        width: 200%;
+        width: 98%;
+        float: right;
+
     }
 
 
@@ -165,11 +170,11 @@ body{
 @media screen and (min-width:1024px){
 
     .punkter{
-        width: 80%;
+        width: 70%;
     }
 
     #logo1{
-        width: 35%
+        width: 25%
     }
 }
 
@@ -177,10 +182,26 @@ body{
 @media screen and (min-width:1200px){
 
     .punkter{
-        width: 50%;
+        width: 70%;
     }
 
     #logo1{
         width: 25%
     }
+
+     #topMenu a{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 }
+
+@media screen and (min-width:1500px){
+    .punkter{
+        width: 65%;
+
+    }
+
+    #topMenu a{
+        padding-left: 30px;
+        padding-right: 30px;
+    }
