--- a/footer.css
+++ b/footer.css
@@ -8,16 +8,17 @@ background-color: #F8DDCF;
 }
 
 footer{
-    position: absolute;
+
     width: 100%;
+
 }
 
-main h1{
+footer h1{
     font-family: 'Raleway', sans-serif;
 
 }
 
-main p{
+footer p{
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -38,29 +39,29 @@ main p{
     border-bottom: 1px solid black;
 }
 
-main{
+footer{
     width: 290px;
     margin: 0 auto;
 }
 
-main a{
+footer a{
     color: black;
     text-decoration: none;
 }
 
-main a:hover{
+footer a:hover{
     text-decoration: underline;
 }
 
 @media screen and (min-width:627px){
-    main{
+   footer{
         width: 500px;
     }
 }
 
 @media screen and (min-width:768px){
 
-main{
+footer{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
@@ -73,7 +74,7 @@ main{
 
 @media screen and (min-width:1024px){
 
-main{
+footer{
      width: 800px;
 
 }
@@ -82,7 +83,7 @@ main{
 
 @media screen and (min-width:1200px){
 
-main{
+footer{
      width: 1000px;
 
 }
@@ -91,7 +92,7 @@ main{
 
 @media screen and (min-width:1500px){
 
-main{
+footer{
      width: 1200px;
 
 }
