--- a/footer.css
+++ b/footer.css
@@ -15,6 +15,8 @@ footer{
 
 footer h1{
     font-family: 'Raleway', sans-serif;
+    border-bottom: 1px solid black;
+    font-size: 20px;
 
 }
 
@@ -27,17 +29,7 @@ footer p{
     margin-right: 10px;
 }
 
-.data-title{
-    border-bottom: 1px solid black;
-}
 
-.data-title1{
-    border-bottom: 1px solid black;
-}
-
-.data-title2{
-    border-bottom: 1px solid black;
-}
 
 footer{
     width: 290px;
@@ -47,6 +39,7 @@ footer{
 footer a{
     color: black;
     text-decoration: none;
+    font-family: 'Montserrat', sans-serif;
 }
 
 footer a:hover{
