--- a/index.css
+++ b/index.css
@@ -5,16 +5,18 @@
 }
 
 body {
-    background-color: #F8DDCF;
+    margin: 0;
+    background-image: url(baggrund.jpg);
+    width: 100%;
 
 }
 
-h1{
+h1 {
     font-family: 'Raleway', sans-serif;
 
 }
 
-p{
+p {
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -38,9 +40,9 @@ main {
 
 }
 
-   #container1 img{
-        width: 100%;
-    }
+#container1 img {
+    width: 100%;
+}
 
 /*Media queries til mobile landscape*/
 
@@ -50,47 +52,48 @@ main {
     }
 
 
-/*Media queries til tablet portrait*/
+    /*Media queries til tablet portrait*/
+    @media screen and (min-width:768px) {
+        main {
+            width: 600px;
+        }
 
-@media screen and (min-width:768px) {
-    main {
-        width: 600px;
-    }
+        main {
+            display: grid;
+            grid-template-columns: auto auto auto;
+            grid-template-rows: auto auto auto;
 
-    main {
-        display: grid;
-        grid-template-columns: auto auto auto;
-        grid-template-rows: auto auto auto;
+        }
 
-    }
+        #container {
+            grid-column: 1/1;
+            grid-row: 1/2;
+            width: 289px;
+            margin: 0 auto;
+            padding-left: 3vw;
+            padding-right: 3vw;
+            padding-top: 3vw;
+            padding-bottom: 1vw;
 
-    #container {
-        grid-column: 1/1;
-        grid-row: 1/2;
-        width: 289px;
-        margin: 0 auto;
-        padding-left: 3vw;
-        padding-right: 3vw;
-        padding-top: 3vw;
-        padding-bottom: 1vw;
-    }
+        }
 
-    #container1 {
-        grid-column: 2/3;
-        grid-row: 1/3;
-        width: 289px;
-        margin: 0 auto;
-        padding-left: 3vw;
-        padding-right: 3vw;
-        padding-top: 11vw;
-        padding-bottom: 1vw;
-    }
+        #container1 {
+            grid-column: 2/3;
+            grid-row: 1/3;
+            width: 289px;
+            margin: 0 auto;
+            padding-left: 3vw;
+            padding-right: 3vw;
+            padding-top: 11vw;
+            padding-bottom: 1vw;
 
-    #container1 img{
-        width: 100%;
-    }
+        }
 
-    .linje{
+        #container1 img {
+            width: 100%;
+        }
+
+        /*.linje{
         grid-column: 2/2;
         grid-row: 1/1;
         width: 1px;
@@ -98,21 +101,21 @@ main {
         background-color:  #F18FAB;
         margin-top: 55px;
 
-    }
+    }*/
+        #container3 {
+
+            grid-column: 1/3;
+
+            padding-right: 3vw;
+            padding-left: 3vw;
+
+            margin-top: 10px;
 
 
-    #container3 {
 
-        grid-column: 1/3;
+        }
 
-        padding-right: 3vw;
-        padding-left: 3vw;
-
-
-
-    }
-
-    .linje1{
+        /*  .linje1{
         width: 450px;
         height: 1px;
         background-color:  #F18FAB;
@@ -120,115 +123,107 @@ main {
         grid-row: 2/3;
         margin-left: 70px;
 
+    }*/
     }
 
+    /*Media queries til tablet landscape*/
+    @media screen and (min-width:1024px) {
+        main {
+            width: 750px;
+        }
 
-}
+        #container {
+            width: 375px;
+        }
 
-/*Media queries til tablet landscape*/
+        .linje {
+            margin-top: 60px;
+        }
 
-@media screen and (min-width:1024px){
-    main{
-        width: 750px;
-    }
+        #container1 {
+            width: 375px;
+            margin-top: -6vw;
 
-    #container{
-        width: 375px;
-    }
+        }
 
-    .linje{
-        margin-top: 60px;
-    }
+        #container1 img {
+            width: 100%
+        }
 
-     #container1{
-        width: 375px;
-         margin-top: -6vw;
+        #container3 {
+            width: 750px;
+        }
 
-    }
-
-    #container1 img{
-        width:100%
-    }
-
-    #container3{
-        width: 750px;
-    }
-
-    .linje1{
-        width: 500px;
-        margin-top: 25px;
-        margin-left: 90px;
-        width: 600px;
-    }
-
-
-}
-
-/*Media queries til 1200px bredde*/
-
-@media screen and (min-width:1200px){
-    main{
-        width: 900px;
-    }
-
-  #container{
-        width: 450px;
-      padding-top: 60px;
-      padding-right: 65px;
-    }
-
-     #container1{
-        width: 450px;
-         padding-left: 120px;
-    }
-
-    #container3{
-        width: 900px;
-    }
-
-    .linje1{
-        width: 700px;
-        margin-top: 40px;
-    }
-
-    .linje{
-        margin-left: 30px;
-        margin-top: 70px;
-    }
-}
-
-/*Media queries til 1500px bredde*/
-
-@media screen and (min-width:1500px){
-    main{
-        width: 1000px;
-    }
-
-    #container{
-        width: 500px;
-        margin-top: 60px;
+        .linje1 {
+            width: 500px;
+            margin-top: 25px;
+            margin-left: 90px;
+            width: 600px;
+        }
 
 
     }
 
-     #container1{
-        width: 500px;
+    /*Media queries til 1200px bredde*/
+    @media screen and (min-width:1200px) {
+        main {
+            width: 900px;
+        }
 
+        #container {
+            width: 450px;
+            padding-top: 60px;
+            padding-right: 65px;
+        }
+
+        #container1 {
+            width: 450px;
+            padding-left: 120px;
+        }
+
+        #container3 {
+            width: 900px;
+        }
+
+        .linje1 {
+            width: 700px;
+            margin-top: 40px;
+        }
+
+        .linje {
+            margin-left: 30px;
+            margin-top: 70px;
+        }
     }
 
-    #container3{
-        width: 1000px;
+    /*Media queries til 1500px bredde*/
+    @media screen and (min-width:1500px) {
+        main {
+            width: 1000px;
+        }
+
+        #container {
+            width: 500px;
+            margin-top: 60px;
+
+
+        }
+
+        #container1 {
+            width: 500px;
+
+        }
+
+        #container3 {
+            width: 1000px;
+        }
+        .linje1 {
+            width: 850px;
+            margin-top: 50px;
+        }
+
+        .linje {
+            margin-top: 90px;
+        }
+
     }
- .linje1{
-        width: 850px;
-        margin-top: 50px;
-    }
-
-     .linje{
-        margin-top: 90px;
-    }
-
-}
-
-
-
