--- a/smykker.css
+++ b/smykker.css
@@ -10,66 +10,67 @@ body {
 
 
 main {
-    width: 290px;
+    width: 350px;
     margin: 0 auto;
     padding-top: 2vw;
 }
 
 /* filtrerings dropdown knap*/
-#filtrering{
+
+#filtrering {
     display: none;
 }
 
-.dropknap{
+.dropknap {
     background-color: transparent;
     color: #F18FAB;
     padding: 12px;
     border: 1px solid #F18FAB;
     cursor: pointer;
-    width: 290px;
+    width: 350px;
     font-size: 16px;
     font-family: 'Montserrat', sans-serif;
     text-align: left;
 }
 
-.dropknap:hover{
+.dropknap:hover {
     color: black;
 
 }
 
-.dropdown{
+.dropdown {
     position: relative;
     display: inline-block;
 }
 
-.content{
+.content {
     display: none;
     position: absolute;
     background-color: transparent;
     border: 1px solid #F18FAB;
     z-index: 1;
-    width: 290px;
+    width: 350px;
 }
 
-.menu_item{
+.menu_item {
     display: block;
     padding: 8px 16px;
     text-decoration: none;
     border: 1px solid #F18FAB;
 }
 
-.content a:hover{
+.content a:hover {}
 
-}
-
-.visContent{
+.visContent {
     display: block;
 }
 
 
 /* grid opsætning af smykker/produkter*/
+
 .smykker {
     display: grid;
+    grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
     margin-top: 2vw;
     font-family: 'Montserrat', sans-serif;
@@ -81,7 +82,7 @@ main {
     border: 8px solid white;
 }
 
-.koeb{
+.koeb {
     border: none;
     background-color: transparent;
     border: 1.5px solid #F18FAB;
@@ -91,40 +92,43 @@ main {
     font-family: 'Montserrat', sans-serif;
 }
 
- .menu_item {
-        background-color: transparent;
-        border: none;
-        color: #F18FAB;
-        cursor: pointer;
-        padding-left: 40pxw;
-        padding-right: 40px;
-     padding-top: 10px;
-     font-family: 'Montserrat', sans-serif;
+.menu_item {
+    background-color: transparent;
+    border: none;
+    color: #F18FAB;
+    cursor: pointer;
+    padding-left: 40pxw;
+    padding-right: 40px;
+    padding-top: 10px;
+    font-family: 'Montserrat', sans-serif;
 
 
 
-    }
-.menu_item:hover{
+}
+
+.menu_item:hover {
     border-bottom: 1px solid #F18FAB;
 }
 
-.knapper{
+.knapper {
     font-family: 'Raleway', sans-serif;
 }
+
+.image {}
 
 
 
 @media screen and (min-width:627px) {
     main {
-        width: 400px;
+        width: 600px;
     }
 
-    .content{
-        width: 400px;
+    .content {
+        width: 600px;
     }
 
-    .dropknap{
-        width: 400px;
+    .dropknap {
+        width: 600px;
     }
 }
 
@@ -137,7 +141,7 @@ main {
         margin: 0 auto;
     }
 
-    .dropdown{
+    .dropdown {
         display: none;
     }
 
@@ -159,8 +163,6 @@ main {
         width: 100%;
         border-bottom: 1px solid #F18FAB;
         background-color: #F8DDCF
-
-
     }
 
     .knapper {
@@ -172,7 +174,7 @@ main {
 
     }
 
-    #filtrering{
+    #filtrering {
         display: block;
     }
 
@@ -203,7 +205,7 @@ main {
         width: 900px;
     }
 
-    .knapper{
+    .knapper {
         width: 900px;
     }
 
@@ -217,7 +219,7 @@ main {
         width: 1000px;
     }
 
-    .knapper{
+    .knapper {
         width: 1000px;
     }
 
