--- a/index.css
+++ b/index.css
@@ -6,8 +6,8 @@
 
 body {
     margin: 0;
-    background-image: url(baggrund.jpg);
-    width: 100%;
+    background-image: url(1.jpg);
+    background-size: 100%;
 
 }
 
@@ -23,7 +23,7 @@ p {
 /* Mobile first version*/
 
 main {
-    width: 290px;
+    width: 360px;
     margin: 0 auto;
     padding-top: 2vw;
 }
@@ -40,190 +40,215 @@ main {
 
 }
 
-#container1 img {
+article img {
     width: 100%;
+
+}
+
+.wpPage2 {
+    padding: 20px;
+}
+
+
+
+.border {
+    border: 1px solid black;
 }
 
 /*Media queries til mobile landscape*/
 
 @media screen and (min-width:627px) {
     main {
-        width: 400px;
+        width: 500px;
     }
 
 
     /*Media queries til tablet portrait*/
     @media screen and (min-width:768px) {
         main {
-            width: 600px;
+            width: 620px;
         }
 
         main {
             display: grid;
-            grid-template-columns: auto auto auto;
-            grid-template-rows: auto auto auto;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr;
+            grid-gap: 10px;
 
         }
 
         #container {
-            grid-column: 1/1;
-            grid-row: 1/2;
-            width: 289px;
-            margin: 0 auto;
-            padding-left: 3vw;
-            padding-right: 3vw;
-            padding-top: 3vw;
-            padding-bottom: 1vw;
+            width: 310px;
 
         }
 
         #container1 {
-            grid-column: 2/3;
-            grid-row: 1/3;
-            width: 289px;
-            margin: 0 auto;
-            padding-left: 3vw;
-            padding-right: 3vw;
-            padding-top: 11vw;
-            padding-bottom: 1vw;
+            width: 310px;
 
         }
 
-        #container1 img {
-            width: 100%;
+        #container2 {
+            width: 310px;
+            margin-top: -20px;
+
+
+
+        }
+        .border {
+            border: 1px solid black;
+            width: 310px;
+            height: 310px;
         }
 
-        /*.linje{
-        grid-column: 2/2;
-        grid-row: 1/1;
-        width: 1px;
-        height: 300px;
-        background-color:  #F18FAB;
-        margin-top: 55px;
+        .wpPage2 {
+            padding-bottom: 0px;
+            padding-top: 0px;
+            padding-left: 12.5px;
+            padding-right: 12.5px;
+            font-size: 14.6px;
+        }
 
-    }*/
+
+
         #container3 {
-
-            grid-column: 1/3;
-
-            padding-right: 3vw;
-            padding-left: 3vw;
-
-            margin-top: 10px;
-
-
-
+            width: 310px;
+            margin-top: -39px;
         }
 
-        /*  .linje1{
-        width: 450px;
-        height: 1px;
-        background-color:  #F18FAB;
-        grid-column: 1/3;
-        grid-row: 2/3;
-        margin-left: 70px;
 
-    }*/
     }
 
     /*Media queries til tablet landscape*/
     @media screen and (min-width:1024px) {
         main {
-            width: 750px;
-        }
-
-        #container {
-            width: 375px;
-        }
-
-        .linje {
-            margin-top: 60px;
-        }
-
-        #container1 {
-            width: 375px;
-            margin-top: -6vw;
-
-        }
-
-        #container1 img {
-            width: 100%
-        }
-
-        #container3 {
-            width: 750px;
-        }
-
-        .linje1 {
-            width: 500px;
-            margin-top: 25px;
-            margin-left: 90px;
-            width: 600px;
-        }
-
-
-    }
-
-    /*Media queries til 1200px bredde*/
-    @media screen and (min-width:1200px) {
-        main {
-            width: 900px;
-        }
-
-        #container {
-            width: 450px;
-            padding-top: 60px;
-            padding-right: 65px;
-        }
-
-        #container1 {
-            width: 450px;
-            padding-left: 120px;
-        }
-
-        #container3 {
-            width: 900px;
-        }
-
-        .linje1 {
-            width: 700px;
-            margin-top: 40px;
-        }
-
-        .linje {
-            margin-left: 30px;
-            margin-top: 70px;
-        }
-    }
-
-    /*Media queries til 1500px bredde*/
-    @media screen and (min-width:1500px) {
-        main {
-            width: 1000px;
-        }
-
-        #container {
-            width: 500px;
-            margin-top: 60px;
-
-
-        }
-
-        #container1 {
-            width: 500px;
-
-        }
-
-        #container3 {
-            width: 1000px;
-        }
-        .linje1 {
             width: 850px;
-            margin-top: 50px;
         }
 
-        .linje {
-            margin-top: 90px;
+
+        #container {
+            width: 425px;
+
         }
 
-    }
+        #container1 {
+            width: 425px;
+
+        }
+
+        #container2 {
+            width: 425px;
+            margin-top: -20px;
+
+
+
+        }
+        .border {
+            border: 1px solid black;
+            width: 425px;
+            height: 425px;
+        }
+
+        .wpPage2 {
+            padding: 52px;
+            font-size: 16px;
+        }
+
+
+
+        #container3 {
+            width: 425px;
+            margin-top: -39px;
+        }
+
+
+
+
+        /*Media queries til 1200px bredde*/
+        @media screen and (min-width:1200px) {
+            main {
+                width: 900px;
+            }
+
+            #container {
+                width: 450px;
+
+            }
+
+            #container1 {
+                width: 450px;
+
+            }
+
+            #container2 {
+                width: 450px;
+                margin-top: -20px;
+
+
+
+            }
+            .border {
+                border: 1px solid black;
+                width: 450px;
+                height: 450px;
+            }
+
+            .wpPage2 {
+                padding: 60px;
+                font-size: 16px;
+            }
+
+
+
+            #container3 {
+                width: 450px;
+                margin-top: -39px;
+            }
+
+
+        }
+
+        /*Media queries til 1500px bredde*/
+        @media screen and (min-width:1500px) {
+            main {
+                width: 1000px;
+            }
+
+            #container {
+                width: 500px;
+
+            }
+
+            #container1 {
+                width: 500px;
+
+            }
+
+            #container2 {
+                width: 500px;
+                margin-top: -20px;
+
+
+
+            }
+            .border {
+                border: 1px solid black;
+                width: 500px;
+                height: 500px;
+            }
+
+            .wpPage2 {
+                padding-top: 94px;
+                padding-bottom: 92px;
+                padding-left: 60px;
+                padding-right: 60px;
+                font-size: 16px;
+            }
+
+
+
+            #container3 {
+                width: 500px;
+                margin-top: -39px;
+            }
+
+        }
