--- a/smykker.css
+++ b/smykker.css
@@ -3,8 +3,10 @@
 }
 
 body {
-    background-color: #F8DDCF;
-    margin: 0;
+   margin: 0;
+    background-image: url(bag.jpg);
+    width:100%;
+    overflow-x: hidden;
 }
 
 
