--- a/single.css
+++ b/single.css
@@ -1,6 +1,7 @@
 body {
-    margin: 0;
-    background-color: #F8DDCF;
+   margin: 0;
+    background-image: url(1.jpg);
+    background-size: 100%;
 }
 
 main {
