--- a/om.css
+++ b/om.css
@@ -28,9 +28,12 @@ main {
     padding-top: 2vw;
 }
 
-main img {
+
+
+#container1 img{
     width: 100%;
     border: 15px solid white;
+
 }
 
 /* style til top icon*/
@@ -57,7 +60,7 @@ main img {
     border: 15px solid white;
 }
     #container1{
-        width: 350px;
+        width: 500px;
         margin: 0 auto;
     }
 
@@ -69,8 +72,8 @@ main img {
     main {
         width: 620px;
         display: grid;
-        grid-template-columns: auto auto auto;
-        grid-template-rows: auto auto auto;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
 
     }
     #container {
@@ -78,8 +81,8 @@ main img {
         grid-row: 1/2;
         width: 290px;
         margin: 0 auto;
-        padding-left: 25px;
-        padding-right: 30px;
+        padding-left: 20px;
+        padding-right: 10px;
         padding-top: 30px;
 
     }
@@ -100,6 +103,7 @@ main img {
     #container2 {
 
         grid-column: 1/3;
+        grid-row: 2/2;
         width: 620px;
         padding-right: 30px;
         padding-left: 30px;
@@ -118,18 +122,22 @@ main img {
         width: 850px;
     }
     #container {
-        width: 545px;
+        width: 500px;
+        padding-left: 10px;
+
+
 
     }
 
     #container1 {
-        width: 305px;
+        width: 350px;
         padding-top: 20px;
     }
 
     #container2 {
         width: 850px;
-        margin-top: -20px;
+        margin-top: 50px;
+        padding: 10px;
     }
 
 
@@ -144,7 +152,7 @@ main img {
 
     #container {
         width: 555px;
-        padding-left: 5px;
+
 
     }
 
@@ -155,15 +163,13 @@ main img {
 
     }
 
-    .linje {
-        margin-top: 95px;
 
-    }
 
 
     #container2 {
         width: 900px;
         margin-top: -20px;
+
     }
 
 
@@ -177,16 +183,20 @@ main img {
     }
 
     #container {
-        padding-left: 1px;
+        width: 550px;
+        padding-right: 150px;
 
     }
 
     #container2 {
-        padding-left: 41px;
+        width: 1000px;
+        margin-top: 70px;
+
     }
 
     #container1{
-        margin: 0;
+        width: 350px;
+
     }
 
 
