--- a/om.css
+++ b/om.css
@@ -28,14 +28,6 @@ main {
     margin-top: 100px;
 }
 
-
-
-#container1 img {
-    width: 100%;
-    border: 15px solid white;
-
-}
-
 /* style til top icon*/
 
 .fas {
@@ -48,6 +40,13 @@ main {
 
 }
 
+article img {
+    width: 100%;
+    border: 4px solid white;
+
+}
+
+
 /*Media queries til mobile landscape*/
 
 @media screen and (min-width:627px) {
@@ -55,157 +54,105 @@ main {
         width: 500px;
     }
 
-    main img {
-        width: 100%;
-        border: 15px solid white;
-    }
-    #container1 {
-        width: 500px;
-        margin: 0 auto;
-    }
 
-}
+    /*Media queries til tablet portrait*/
+    @media screen and (min-width:768px) {
+        main {
+            width: 620px;
+        }
 
-/*Media queries til tablet portrait*/
+        #container {
+            width: 620px;
 
-@media screen and (min-width:768px) {
-    main {
-        width: 620px;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
+        }
 
-    }
-    #container {
-        grid-column: 1/1;
-        grid-row: 1/2;
-        width: 290px;
-        margin: 0 auto;
-        padding-left: 20px;
-        padding-right: 10px;
-        padding-top: 30px;
+        #container1 {
+            width: 620px;
+            display: flex;
+            flex-wrap: wrap;
+
+
+        }
+
+        #container1 img {
+            width: 49.6%;
+        }
 
     }
 
-    #container1 {
-        grid-column: 2/3;
-        grid-row: 1/3;
-        width: 290px;
-        margin: 0 auto;
-        padding-left: 30px;
-        padding-right: 30px;
-        padding-top: 70px;
-
-    }
+    /*Media queries til tablet landscape*/
+    @media screen and (min-width:1024px) {
+        main {
+            width: 850px;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-gap: 30px;
+        }
 
 
+        #container {
+            width: 500px;
 
-    #container2 {
+        }
 
-        grid-column: 1/3;
-        grid-row: 2/2;
-        width: 620px;
-        padding-right: 30px;
-        padding-left: 30px;
-        margin-top: -10px;
+        #container1 {
+            width: 530px;
 
+        }
 
+        #container1 img {
+            width: 60%;
 
-    }
-
-}
-
-/*Media queries til tablet landscape*/
-
-@media screen and (min-width:1024px) {
-    main {
-        width: 850px;
-    }
-    #container {
-        width: 400px;
-        padding-left: 10px;
-
-    }
-
-    #container1 {
-        width: 600px;
-        height: 500px;
-        padding-top: 20px;
-        margin-left: 100px;
-    }
-
-    #container1 img{
-        width: 45%;
-    }
-
-    #container2 {
-        width: 850px;
-        padding-left: 10px;
-        padding-right: 10px;
-        margin-top: -10px;
-    }
+        }
 
 
-}
+        /*Media queries til 1200px bredde*/
+        @media screen and (min-width:1200px) {
+            main {
+                width: 900px;
+                grid-gap: 70px;
+            }
 
-/*Media queries til 1200px bredde*/
+            #container {
+                width: 500px;
 
-@media screen and (min-width:1200px) {
-    main {
-        width: 900px;
-    }
+            }
 
-    #container {
-        width: 555px;
+            #container1 {
+                width: 400px;
 
+            }
 
-    }
-
-    #container1 {
-        width: 245px;
-        padding-top: 30px;
-        margin-left: 40px;
-
-
-    }
-
-    #container1 img{
-        width: 100%
-    }
-
-    #container2 {
-        width: 900px;
-        margin-top: -20px;
-
-    }
-
-
-}
-
-/*Media queries til 1500px bredde*/
-
-@media screen and (min-width:1500px) {
-    main {
-        width: 1000px;
-    }
-
-    #container {
-        width: 550px;
-        padding-right: 150px;
-
-    }
-
-    #container2 {
-        width: 1000px;
-        margin-top: 70px;
-
-    }
-
-    #container1 {
-        width: 350px;
-
-    }
+            #container1 img {
+                width: 81%;
+            }
 
 
 
-}
+
+        }
+
+        /*Media queries til 1500px bredde*/
+        @media screen and (min-width:1500px) {
+            main {
+                width: 1000px;
+                grid-gap: 120px
+            }
+
+            #container {
+                width: 600px;
+
+            }
+
+            #container1 {
+                width: 400px;
+
+            }
+
+            #container1 img {
+                width: 69%;
+            }
+
+
+
+        }
