padding og margin ændrringer

--- a/betingelser.css
+++ b/betingelser.css
@@ -10,7 +10,7 @@ body {
 main {
     width: 360px;
     margin: 0 auto;
-    margin-top: 100px;
+    padding-top: 60px;
 }
 
 
@@ -39,6 +39,7 @@ main p{
 @media screen and (min-width:768px){
     main{
         width: 620px;
+        padding-top: 100px;
     }
 
 }
