--- a/om.css
+++ b/om.css
@@ -25,7 +25,7 @@ p {
 main {
     width: 360px;
     margin: 0 auto;
-    margin-top: 100px;
+    padding-top: 60px;
 }
 
 /* style til top icon*/
@@ -59,6 +59,7 @@ article img {
     @media screen and (min-width:768px) {
         main {
             width: 620px;
+            padding-top: 100px;
         }
 
         #container {
