--- a/single.css
+++ b/single.css
@@ -7,7 +7,7 @@ body {
 main {
     width: 360px;
     margin: 0 auto;
-    margin-top: 100px;
+    padding-top: 60px;
 }
 
 main h1{
@@ -55,6 +55,7 @@ main p{
 @media screen and (min-width:768px){
     main{
         width: 620px;
+        padding-top: 100px;
     }
     .data-container{
         display: grid;
