--- a/smykker.css
+++ b/smykker.css
@@ -13,7 +13,7 @@ body {
 main {
     width: 360px;
     margin: 0 auto;
-    padding-top: 2vw;
+    padding-top: 60px;
 }
 
 /* filtrerings dropdown knap*/
@@ -147,7 +147,7 @@ main {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 20px;
-        margin-top: 110px;
+        padding-top: 100px;
 
     }
 
@@ -159,9 +159,9 @@ main {
     }
     nav {
         top: 0;
-        width: 67%;
-        border-bottom: 1px solid #F18FAB;
-        border-top: 1px solid #F18FAB;
+        width: 530px;
+        border-bottom: 2px solid #F18FAB;
+        border-top: 2px solid #F18FAB;
         background-color: transparent;
         float: right;
     }
@@ -195,7 +195,7 @@ main {
 
 
     nav {
-        width: 50%;
+        width: 615px;
 
 
     }
@@ -215,6 +215,12 @@ main {
 @media screen and (min-width:1200px) {
     main {
         width: 900px;
+    }
+
+    nav {
+        width: 635px;
+
+
     }
 
 
