--- a/vaerkstedet.css
+++ b/vaerkstedet.css
@@ -25,7 +25,7 @@ p {
 main {
     width: 360px;
     margin: 0 auto;
-    margin-top: 100px;
+    padding-top: 60px;
 }
 
 /* style til top icon*/
@@ -72,6 +72,7 @@ article img {
 
         #container {
             width: 620px;
+            padding-top: 100px;
 
         }
 
