--- a/footer.css
+++ b/footer.css
@@ -1,3 +1,4 @@
+/* overordnede regler for styling */
 * {
     box-sizing: border-box;
 }
@@ -47,9 +48,7 @@ footer a:hover {
 }
 
 form {
-    width: 100%;
-    background-color: white;
-    padding: 5px;
+    background-color: transparent;
 }
 
 #tilmeld {
@@ -81,8 +80,8 @@ form {
 
     footer {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
         grid-gap: 40px;
         width: 620px;
         margin: 0 auto;
