--- a/single.css
+++ b/single.css
@@ -1,3 +1,4 @@
+/* Overordnede regler for styling */
 body {
    margin: 0;
     background-image: url(1.jpg);
@@ -31,7 +32,7 @@ main p{
 
 .image{
     width: 100%;
-    border: 8px solid white;
+    border: 4px solid white;
 
 }
 
@@ -41,17 +42,16 @@ main p{
 
 .kobnu{
     border: none;
-    background-color: transparent;
-    border: 1.5px solid #F18FAB;
+    background-color: white;
     padding: 4px;
     width: 100%;
     cursor: pointer;
     font-family: 'Montserrat', sans-serif;
+    margin-top: 10px;
 }
 
 
 /*Media queries til mobile landscape*/
-
 @media screen and (min-width:627px){
     main{
         width: 500px;
@@ -61,11 +61,10 @@ main p{
 }
 
 /*Media queries til tablet portrait*/
-
 @media screen and (min-width:768px){
     main{
         width: 620px;
-        padding-top: 100px;
+        padding-top: 120px;
     }
     .data-container{
         display: grid;
@@ -96,10 +95,17 @@ main p{
 }
 
 /*Media queries til tablet landscape*/
-
 @media screen and (min-width:1024px){
     main{
         width: 850px;
+    }
+
+    .image{
+        width: 425px;
+    }
+
+    .information{
+        width: 425px;
     }
 
 
@@ -107,20 +113,36 @@ main p{
 }
 
 /*Media queries til 1200px bredde*/
-
 @media screen and (min-width:1200px){
     main{
         width: 900px;
+        padding-top: 130px;
+    }
+
+    .image{
+        width: 450px;
+    }
+
+    .information{
+        width: 450px;
     }
 
 
 }
 
 /*Media queries til 1500px bredde*/
-
 @media screen and (min-width:1500px){
     main{
         width: 1000px;
+        padding-top: 140px;
+    }
+
+    .image{
+        width: 500px;
+    }
+
+    .information{
+        width: 500px;
     }
 
 
