--- a/smykker.css
+++ b/smykker.css
@@ -1,3 +1,4 @@
+/* Overordnede regler for styling*/
 * {
     box-sizing: border-box;
 }
@@ -25,6 +26,8 @@ main {
     cursor: pointer;
 
 }
+
+/* MOBILE VERSION FIRST */
 
 /* filtrerings dropdown knap*/
 
@@ -57,7 +60,6 @@ main {
     display: none;
     position: absolute;
     background-color: white;
-
     z-index: 1;
     width: 360px;
 }
@@ -88,7 +90,7 @@ main {
 
 .smykker img {
     width: 100%;
-    border: 8px solid white;
+    border: 4px solid white;
 }
 
 .koeb {
@@ -108,7 +110,7 @@ main {
     color: #F18FAB;
     font-weight: 600;
     cursor: pointer;
-    padding-left: 40pxw;
+    padding-left: 40px;
     padding-right: 40px;
     padding-top: 10px;
     font-family: 'Montserrat', sans-serif;
@@ -157,13 +159,13 @@ main {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 20px;
-        padding-top: 100px;
+        margin-top: 100px;
 
     }
 
     .smykker img {
         width: 100%;
-        border: 8px solid white;
+        border: 4px solid white;
 
 
     }
@@ -246,7 +248,7 @@ main {
 
 
     nav {
-        width: 45%
+        width: 45%;
     }
 
 }
