--- a/footer.css
+++ b/footer.css
@@ -9,7 +9,7 @@ body {
 }
 
 footer {
-    padding-top: 4vw;
+    padding-top: 100px;
     width: 100%;
 
 }
@@ -59,6 +59,7 @@ form {
     background-color: white;
     font-family: 'Montserrat', sans-serif;
     border: 1px solid white;
+    cursor: pointer
 }
 
 #email {
