--- a/header.css
+++ b/header.css
@@ -25,6 +25,7 @@ body{
    transform: scale(1.2);
     margin-right: 10px;
     margin-top: 10px;
+    cursor: pointer;
 
 
 }
@@ -97,6 +98,7 @@ body{
     float: left;
    transform: scale(1);
     margin-right: 10px;
+        cursor: pointer;
 
 
 }
