--- a/index.css
+++ b/index.css
@@ -220,6 +220,7 @@ article img {
         @media screen and (min-width:1500px) {
             main {
                 width: 1000px;
+                padding-top: 120px;
             }
 
             #container {
