--- a/kontakt.css
+++ b/kontakt.css
@@ -147,6 +147,7 @@ main p {
 @media screen and (min-width:1500px) {
     main {
         width: 1000px;
+        padding-top: 120px;
     }
 
     #container {
