--- a/vaerkstedet.css
+++ b/vaerkstedet.css
@@ -144,7 +144,8 @@ article img {
 @media screen and (min-width:1500px) {
     main {
         width: 1000px;
-        grid-gap: 120px
+        grid-gap: 120px;
+        padding-top: 120px;
     }
 
     #container {
@@ -160,6 +161,8 @@ article img {
     #container1 img {
         width: 69%;
     }
+
+
 
 
 
